# myprojs

./: .gitignore  README.md
demo1_cmake/: CMakeLists.txt  README.md
demo1_cmake/Demo1Core/src/: main.cpp
demo2_cmake_sfml/: CMakeLists.txt  README.md
demo2_cmake_sfml/Demo2Core/: CMakeLists.txt
demo2_cmake_sfml/Demo2Core/src/: main.cpp
